devops/base/db/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: timemachine
    cluster-name: timemachine-patroni
  name: timemachine-patroni-master
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cluster-name: timemachine-patroni
    role: master
    app.kubernetes.io/name: patroni
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: timemachine-patroni
  labels:
    app: timemachine
    cluster-name: timemachine-patroni
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      statefulset: timemachine-patroni
  serviceName: timemachine-patroni
  template:
    metadata:
      labels:
        app: timemachine
        statefulset: timemachine-patroni
        cluster-name: timemachine-patroni
        app.kubernetes.io/name: patroni
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: statefulset
                    operator: In
                    values:
                      - timemachine-patroni
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: postgresql
          image: image-registry.openshift-image-registry.svc:5000/bcgov/patroni-postgres:12.4-latest
          # Because we are using image reference to a tag, we need to always pull the image otherwise
          #   we end up with outdated/out-of-sync image depending on the node where it is running
          imagePullPolicy: Always
          ports:
            - containerPort: 8008
              protocol: TCP
            - containerPort: 5432
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 5
            failureThreshold: 4
            exec:
              command:
                - /usr/share/scripts/patroni/health_check.sh
          volumeMounts:
            - mountPath: /home/postgres/pgdata
              name: postgresql
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: timemachine-patroni
      terminationGracePeriodSeconds: 10
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
    - metadata:
        annotations:
          volume.beta.kubernetes.io/storage-class: netapp-file-standard
        labels:
          app: timemachine
        name: postgresql
      spec:
        storageClassName: netapp-file-standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
